tests/cheri-ci/expected/0233-undeclared-identifier.error.c.expected
cheri-ci/0233-undeclared-identifier.error.c:2:3: error: use of undeclared identifier 'x'
  x;
  ^
ยง6.5.1#2: 
2   An identifier is a primary expression, provided it has been declared as designating an
    object (in which case it is an lvalue) or a function (in which case it is a function
    designator).91)
